option('tests', type: 'boolean', value: true, description: 'Enable tests')
option('portal-tests', type: 'boolean', value: true, description: 'Enable portaltests')
option('docs', type: 'boolean', value: true, description: 'Enable docs')
option('utils', type: 'boolean', value: true, description: 'Enable CLI utilities')
option('introspection', type: 'boolean', value: true,
  description: 'Generate GObject introspection files')